--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "cross-env NODE_OPTIONS='--openssl-legacy-provider' vue-cli-service serve",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.0",
     "core-js": "^3.6.5",
+    "cross-env": "^7.0.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
