--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "serve": "cross-env NODE_OPTIONS='--openssl-legacy-provider' vue-cli-service serve",
-    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' vue-cli-service build",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
